updating the author details and changed to Orbitron for a more legible scifi font. Repaired the Character sheet so the game starts again
- merged in the compatibility changes
- Reverted the author details for the project in this repo
- Changed to Orbitron to improve legibility but keep the scifi - its ok at the moment
- fixed the character sheet to say Spark but fix the startup problems
- Confirmed functioning for Version 9 (build 269)

--- a/scss/style.scss
+++ b/scss/style.scss
@@ -17,8 +17,8 @@ $hover-brightness: 0.8;
 // Imports
 @import 'mixin.scss';
 @font-face {
-  font-family: 'Exan'; /*a name to be used later*/
-  src: url("assets/fonts/Exan-Regular.ttf"); /*URL to font*/
+  font-family: 'Orbitron'; /*a name to be used later*/
+  src: url("assets/fonts/Orbitron-Light.ttf"); /*URL to font*/
 }
 
 /*
